Move config files to config directory

--- a/config/base_config.cfg
+++ b/config/base_config.cfg
@@ -32,8 +32,7 @@ stride = 96
 factory = "textcat"
 
 [components.textcat.model]
-@architectures = "spacy.TextCatCNN.v2"
-exclusive_classes = true
+@architectures = "spacy.TextCatEnsemble.v2"
 nO = null
 
 [components.textcat.model.tok2vec]
@@ -42,6 +41,12 @@ grad_factor = 1.0
 
 [components.textcat.model.tok2vec.pooling]
 @layers = "reduce_mean.v1"
+
+[components.textcat.model.linear_model]
+@architectures = "spacy.TextCatBOW.v2"
+exclusive_classes = true
+ngram_size = 1
+no_output_layer = false
 
 [corpora]
 
@@ -77,3 +82,4 @@ buffer = 256
 
 [initialize]
 vectors = ${paths.vectors}
+
