--- a/config/config.cfg
+++ b/config/config.cfg
@@ -26,8 +26,14 @@ scorer = {"@scorers":"spacy.textcat_scorer.v2"}
 threshold = 0.0
 
 [components.textcat.model]
-@architectures = "spacy.TextCatCNN.v2"
+@architectures = "spacy.TextCatEnsemble.v2"
+nO = null
+
+[components.textcat.model.linear_model]
+@architectures = "spacy.TextCatBOW.v2"
 exclusive_classes = true
+ngram_size = 1
+no_output_layer = false
 nO = null
 
 [components.textcat.model.tok2vec]
