--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 services:
 
   api:
-    build: .
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile
     restart: unless-stopped
     volumes:
       - ./models/model-best:/app/model:ro
@@ -14,7 +16,7 @@ services:
     depends_on:
       - api
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./docker/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - 80:80
 
