--- a/docker/Dockerfile_gpu
+++ b/docker/Dockerfile_gpu
@@ -11,7 +11,7 @@ RUN apt-get update
 RUN apt-get install -y python3.10 python3-pip
 
 # install requirements
-COPY requirements.txt .
+COPY requirements_gpu.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # models volume
